Setup JSON Server fake backend and organize project folders

--- a/html/primavera.html
+++ b/html/primavera.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PRIMAVERA Business Software Solutions</title>
-    <link rel="icon" href="imagens/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/imagens/favicon.ico" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,14 +18,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="primavera.css" />
+    <link rel="stylesheet" href="/css/primavera.css" />
   </head>
 
   <body>
     <header>
       <section id="topHeader">
         <a href="https://pt.primaverabss.com/pt/"
-          ><img src="imagens/logotipo.png"
+          ><img src="/imagens/logotipo.png"
         /></a>
 
         <section id="topHeaderIcons">
@@ -64,11 +64,11 @@
             >Saiba mais &gt;</a
           >
         </section>
-        <img src="imagens/computador.png" id="bannerComputador" />
+        <img src="/imagens/computador.png" id="bannerComputador" />
       </section>
       <section id="missao">
         <h2 class="seccao">Missão</h2>
-        <img src="imagens/missao.jpg" alt="Missão" id="imagemMissao" />
+        <img src="/imagens/missao.jpg" alt="Missão" id="imagemMissao" />
         <section id="missaoTexto">
           <h3>
             Simplificar a vida nas organizações, aumentando a criação de valor,
@@ -108,21 +108,21 @@
         <h2 class="seccao">Equipa</h2>
         <section id="elementosEquipa">
           <section>
-            <img src="imagens/foto1.png" alt="Daniela Alves" />
+            <img src="/imagens/foto1.png" alt="Daniela Alves" />
             <section class="equipaInfo">
               <p>Daniela Alves</p>
               <p>Web Developer</p>
             </section>
           </section>
           <section>
-            <img src="imagens/foto2.png" alt="Manuela Ribeiro" />
+            <img src="/imagens/foto2.png" alt="Manuela Ribeiro" />
             <section class="equipaInfo">
               <p>Manuela Ribeiro</p>
               <p>Front-end developer</p>
             </section>
           </section>
           <section>
-            <img src="imagens/foto3.png" alt="Bruna Silva" />
+            <img src="/imagens/foto3.png" alt="Bruna Silva" />
             <section class="equipaInfo">
               <p>Bruna Silva</p>
               <p>Designer</p>
@@ -135,7 +135,7 @@
         <h2 class="seccao">Oferta formativa</h2>
         <section class="slider">
           <div id="slide">
-            <img src="imagens/slider1.jpg" />
+            <img src="/imagens/slider1.jpg" />
             <div class="infoSlide">
               <div class="info">
                 <h2>PRIMAVERA Academy</h2>
@@ -204,10 +204,10 @@
       </section>
     </footer>
     <section id="divTelefone">
-      <img src="imagens/telefone.png" /> 919 204 462
+      <img src="/imagens/telefone.png" /> 919 204 462
     </section>
-    <a href="#" id="setaAcima"><img src="imagens/setacima.png" /></a>
-    <section id="tela">
+    <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
+    <!-- <section id="tela">
       <section id="secCookies">
         <span
           >Este website utiliza cookies para melhorar a sua experiência de
@@ -219,6 +219,6 @@
           ></span
         >
       </section>
-    </section>
+    </section> -->
   </body>
 </html>
