Create Email validation, login and Save id and name in Local Storange

--- a/html/primavera.html
+++ b/html/primavera.html
@@ -35,7 +35,7 @@
           <a href="registo_utilizador.html"
             ><i class="fa-solid fa-user-plus" title="Registo"></i
           ></a>
-          <a href="#"
+          <a href="#" id="Userlogin"
             ><i class="fa-solid fa-arrow-right-to-bracket" title="Login"></i
           ></a>
           <i class="fa-solid fa-bars"></i>
@@ -220,5 +220,15 @@
         >
       </section>
     </section> -->
+
+    <section class="modal">
+      <section class="firstPage">
+        <span class="btModalClose">X</span>
+        <div class="modalBody"></div>
+      </section>
+    </section>
+
+    <script src="/js/loginModal.js"></script>
+    <script src="/js/utils.js"></script>
   </body>
 </html>
