Icons update when switching pages

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -52,98 +52,11 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section id="banner">
+    <main>     
         <section>
-          <h1>TECNOLOGIA PARA VENCER</h1>
-          <h2>Conheça os casos de sucesso PRIMAVERA</h2>
-          <h3>Na linha da frente na digitalização de empresas</h3>
-          <a
-            href="https://pt.primaverabss.com/pt/pagina/tecnologia-para-vencer/"
-            id="btSaibaMais"
-            >Saiba mais &gt;</a
-          >
-        </section>
-        <img src="/imagens/computador.png" id="bannerComputador" />
-      </section>
-      <section id="missao">
-        <h2 class="seccao">Missão</h2>
-        <img src="/imagens/missao.jpg" alt="Missão" id="imagemMissao" />
-        <section id="missaoTexto">
-          <h3>
-            Simplificar a vida nas organizações, aumentando a criação de valor,
-            é a nossa grande missão.
-          </h3>
-          <p>
-            Desafiar o desconhecido. Explorar possibilidades. Transpor
-            barreiras. Inovar. São estas as motivações que desde 1993 nos
-            conduzem na busca de soluções de gestão inovadoras que simplificam a
-            vida nas organizações.
-          </p>
-          <p>
-            A paixão pela inovação na gestão empresarial está no ADN da
-            PRIMAVERA. Um entusiasmo contagiante que colocamos ao serviço das
-            organizações, disponibilizando-lhes um leque crescente de soluções
-            de gestão que agilizam as operações e aumentam a rentabilidade do
-            negócio.
-          </p>
-          <p>
-            Acreditamos na força das ideias. Auxiliamos a sua concretização.
-            Impulsionamos os resultados. Defendemos que com a tecnologia certa,
-            crescer é o caminho. Do mais pequeno micronegócio a uma grande
-            multinacional, disponibilizamos soluções ajustadas, ágeis e
-            funcionais que dão mais força ao negócio.
-          </p>
-          <p>
-            <a
-              href="https://pt.primaverabss.com/fotos/editor2/brochurainstitucional_2017_web2.pdf"
-              id="linkInstitucional"
-              >» Conheça a nossa brochura institucional</a
-            >
-          </p>
-        </section>
-      </section>
-      <hr class="separador" />
-      <section id="equipa">
-        <h2 class="seccao">Equipa</h2>
-        <section id="elementosEquipa">
-          <section>
-            <img src="/imagens/foto1.png" alt="Daniela Alves" />
-            <section class="equipaInfo">
-              <p>Daniela Alves</p>
-              <p>Web Developer</p>
-            </section>
-          </section>
-          <section>
-            <img src="/imagens/foto2.png" alt="Manuela Ribeiro" />
-            <section class="equipaInfo">
-              <p>Manuela Ribeiro</p>
-              <p>Front-end developer</p>
-            </section>
-          </section>
-          <section>
-            <img src="/imagens/foto3.png" alt="Bruna Silva" />
-            <section class="equipaInfo">
-              <p>Bruna Silva</p>
-              <p>Designer</p>
-            </section>
-          </section>
-        </section>
-      </section>
-      <hr class="separador" />
-      <section id="ofertaFormativa">
-        <h2 class="seccao">Oferta formativa</h2>
-        <section class="slider">
-          <div id="slide">
-            <img src="/imagens/slider1.jpg" />
-            <div class="infoSlide">
-              <div class="info">
-                <h2>PRIMAVERA Academy</h2>
-                <h3>Juntos seremos mais fortes!</h3>
-                <p>Aposte em novas competências</p>
-              </div>
-            </div>
-          </div>
+            <br><br><br><br><br>
+          <h1 style="text-align: center; font-weight: bold;font-size: 4em;">PERFIL</h1>
+          <br><br><br><br><br>
         </section>
       </section>
     </main>
