--- a/html/registo_utilizador.html
+++ b/html/registo_utilizador.html
@@ -39,7 +39,7 @@
           <a href="javascript:void(0)"
             ><i class="fa-solid fa-magnifying-glass" title="Pesquisa"></i
           ></a>
-          <a href="registo_utilizador.html"
+          <a href="#" id="iconReg"
             ><i class="fa-solid fa-user-plus" title="Registo"></i
           ></a>
           <a href="#" id="Userlogin"
