Fix  close button  modal and input search in head

--- a/html/perfil.html
+++ b/html/perfil.html
@@ -31,16 +31,12 @@
 
         <section id="topHeaderIcons">
           <span id="greeting"></span>
-         
+
           <div class="search-container">
+            <input type="text" id="searchInput" class="search-input" />
             <a href="javascript:void(0)" id="IconSearch">
               <i class="fa-solid fa-magnifying-glass" title="Pesquisa"></i>
             </a>
-            <input
-              type="text"
-              id="searchInput"
-              class="search-input"
-            />
           </div>
          
           <a href="#" id="iconReg"
