Created User Profile Page

--- a/html/registo_utilizador.html
+++ b/html/registo_utilizador.html
@@ -112,8 +112,8 @@
           <div class="col-sm-3">
             <select id="pais" class="form-select" required>
               <option value="">-- Seleccione um país --</option>
-              <option value="pt">Portugal</option>
-              <option value="es">Espanha</option>
+              <option value="Portugal">Portugal</option>
+              <option value="Espanha">Espanha</option>
             </select>
           </div>
         </div>
