--- a/html/perfil.html
+++ b/html/perfil.html
@@ -38,7 +38,7 @@
               <i class="fa-solid fa-magnifying-glass" title="Pesquisa"></i>
             </a>
           </div>
-         
+
           <a href="#" id="iconReg"
             ><i class="fa-solid fa-user-plus" title="Registo"></i
           ></a>
@@ -59,12 +59,16 @@
         </ul>
       </nav>
     </header>
-    <main>     
-        <section>
-            <br><br><br><br><br>
-          <h1 style="text-align: center; font-weight: bold;font-size: 4em;">PERFIL</h1>
-          <br><br><br><br><br>
-        </section>
+    <main>
+      <section class="profileTable">
+        <h1>Perfil</h1>
+
+        <table>
+          <tbody id="perfilLogado"></tbody>
+        </table>
+        <button type="button" class="btn btn-primary">
+          Alterar Informação
+        </button>
       </section>
     </main>
     <footer>
@@ -146,7 +150,7 @@
         <span class="btModalClose">X</span>
         <div class="modalBody"></div>
       </section>
-    </section>    
+    </section>
 
     <script src="/js/loginModal.js"></script>
     <script src="/js/register.js"></script>
