--- a/html/perfil.html
+++ b/html/perfil.html
@@ -64,9 +64,9 @@
         <h1>Perfil</h1>
 
         <table>
-          <tbody id="perfilLogado"></tbody>
+          <tbody id="profileLog"></tbody>
         </table>
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btnEditProfile" id="editProfile">
           Alterar Informação
         </button>
       </section>
@@ -152,8 +152,9 @@
       </section>
     </section>
 
-    <script src="/js/loginModal.js"></script>
-    <script src="/js/register.js"></script>
-    <script src="/js/utils.js"></script>
-  </body>
+    <script src="../js/utils.js" defer></script>
+    <script src="../js/head.js" defer></script>
+    <script src="../js/loginModal.js" defer></script>
+    <script src="../js/perfil.js" defer></script>
+    <script src="../js/register.js" defer></script>
 </html>
