--- a/html/primavera.html
+++ b/html/primavera.html
@@ -235,8 +235,10 @@
       </section>
     </section>
 
-    <script src="/js/loginModal.js"></script>
-    <script src="/js/register.js"></script>
-    <script src="/js/utils.js"></script>
+    <script src="../js/utils.js" defer></script>
+    <script src="../js/head.js" defer></script>
+    <script src="../js/loginModal.js" defer></script>
+    <script src="../js/perfil.js" defer></script>
+    <script src="../js/register.js" defer></script>
   </body>
 </html>
