Created pages to change password

--- a/html/EditarPerfil.html
+++ b/html/EditarPerfil.html
@@ -150,9 +150,11 @@
             </select>
           </div>
         </div>
-        <button type="submit" class="btnSaveProfile" id="SaveProfile">
-          Guardar alteraçoes
-        </button>
+        <p class="btnEditProfileGroup">
+          <button type="submit" class="btnEditProfile" id="SaveProfile">
+            Guardar alteraçoes
+          </button>
+        </p>
       </form>
     </main>
 
