--- a/html/EditarSenha.html
+++ b/html/EditarSenha.html
@@ -13,10 +13,16 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/primavera.css" />
   </head>
@@ -59,23 +65,48 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section class="profileTable">
-        <h1>Perfil</h1>
 
-        <table>
-          <tbody id="profileLog"></tbody>
-        </table>
-      </section>
-      <p class="btnEditProfileGroup">
-        <button type="button" class="btnEditProfile" id="editProfile">
-          Alterar Informação
-        </button>
-        <button type="button" class="btnEditProfile" id="editPasswordProfile">
-          Alterar Senha
-        </button>
-      </p>
+    <main id="pag_registo">
+      <h1 class="profileTable">Perfil - Alterar Senha</h1>
+      <form id="editFormPasswordRegistro">
+        <div class="row g-3 align-items-center mb-3">
+          <label for="passwordOld" class="col-form-label col-sm-2"
+            >Antiga Senha:</label
+          >
+          <div class="col-sm-4">
+            <input type="password" id="passwordOld" class="form-control" />
+          </div>
+        </div>
+        <div class="row g-3 align-items-center mb-3">
+          <label for="passwordNew" class="col-form-label col-sm-2"
+            >Nova Senha:</label
+          >
+          <div class="col-sm-4">
+            <input type="password" id="passwordNew" class="form-control" />
+          </div>
+        </div>
+        <div class="row g-3 align-items-center mb-3">
+          <label for="passwordConfirm" class="col-form-label col-sm-2"
+            >Confirme a nova senha:</label
+          >
+          <div class="col-sm-4">
+            <input type="password" id="passwordConfirm" class="form-control" />
+          </div>
+        </div>
+        <div class="row g-3 align-items-center mb-3">
+          <p class="btnEditProfileGroup">
+            <button
+              type="submit"
+              class="btnEditProfile"
+              id="SavePasswordProfile"
+            >
+              Guardar alteraçoes
+            </button>
+          </p>
+        </div>
+      </form>
     </main>
+
     <footer>
       <section class="colFooter">
         <p class="footerTitulos">PRIMAVERA</p>
@@ -158,8 +189,10 @@
     </section>
 
     <script src="../js/utils.js" defer></script>
+    <script src="/js/editarSenha.js"></script>
     <script src="../js/head.js" defer></script>
     <script src="../js/loginModal.js" defer></script>
     <script src="../js/perfil.js" defer></script>
     <script src="../js/register.js" defer></script>
+  </body>
 </html>
