Code and Decode to User Password

--- a/html/EditarPerfil.html
+++ b/html/EditarPerfil.html
@@ -152,7 +152,7 @@
         </div>
         <p class="btnEditProfileGroup">
           <button type="submit" class="btnEditProfile" id="SaveProfile">
-            Guardar alteraçoes
+            Guardar alterações
           </button>
         </p>
       </form>
