--- a/html/EditarSenha.html
+++ b/html/EditarSenha.html
@@ -100,7 +100,7 @@
               class="btnEditProfile"
               id="SavePasswordProfile"
             >
-              Guardar alteraçoes
+              Guardar alterações
             </button>
           </p>
         </div>
