--- a/html/EditarPerfil.html
+++ b/html/EditarPerfil.html
@@ -45,6 +45,12 @@
             </a>
           </div>
 
+          <section class="topHeaderIconAdm">
+            <a href="#" id="iconLogAdm"
+              ><i class="fa-solid fa-gear" title="Adm"></i
+            ></a>
+          </section>
+
           <a href="#" id="iconReg"
             ><i class="fa-solid fa-user-plus" title="Registo"></i
           ></a>
@@ -242,8 +248,7 @@
     <script src="../js/utils.js" defer></script>
     <script src="../js/head.js" defer></script>
     <script src="../js/loginModal.js" defer></script>
-    <script src="../js/perfil.js" defer></script>
-    <script src="../js/editarPerfil.js"></script>
+    <script src="../js/editarPerfil.js" defer></script>
     <script src="../js/register.js" defer></script>
   </body>
 </html>
