--- a/html/adm.html
+++ b/html/adm.html
@@ -13,10 +13,16 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/primavera.css" />
   </head>
@@ -65,101 +71,28 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section id="banner">
-        <section>
-          <h1>TECNOLOGIA PARA VENCER</h1>
-          <h2>Conheça os casos de sucesso PRIMAVERA</h2>
-          <h3>Na linha da frente na digitalização de empresas</h3>
-          <a
-            href="https://pt.primaverabss.com/pt/pagina/tecnologia-para-vencer/"
-            id="btSaibaMais"
-            >Saiba mais &gt;</a
-          >
-        </section>
-        <img src="/imagens/computador.png" id="bannerComputador" />
-      </section>
-      <section id="missao">
-        <h2 class="seccao">Missão</h2>
-        <img src="/imagens/missao.jpg" alt="Missão" id="imagemMissao" />
-        <section id="missaoTexto">
-          <h3>
-            Simplificar a vida nas organizações, aumentando a criação de valor,
-            é a nossa grande missão.
-          </h3>
-          <p>
-            Desafiar o desconhecido. Explorar possibilidades. Transpor
-            barreiras. Inovar. São estas as motivações que desde 1993 nos
-            conduzem na busca de soluções de gestão inovadoras que simplificam a
-            vida nas organizações.
-          </p>
-          <p>
-            A paixão pela inovação na gestão empresarial está no ADN da
-            PRIMAVERA. Um entusiasmo contagiante que colocamos ao serviço das
-            organizações, disponibilizando-lhes um leque crescente de soluções
-            de gestão que agilizam as operações e aumentam a rentabilidade do
-            negócio.
-          </p>
-          <p>
-            Acreditamos na força das ideias. Auxiliamos a sua concretização.
-            Impulsionamos os resultados. Defendemos que com a tecnologia certa,
-            crescer é o caminho. Do mais pequeno micronegócio a uma grande
-            multinacional, disponibilizamos soluções ajustadas, ágeis e
-            funcionais que dão mais força ao negócio.
-          </p>
-          <p>
-            <a
-              href="https://pt.primaverabss.com/fotos/editor2/brochurainstitucional_2017_web2.pdf"
-              id="linkInstitucional"
-              >» Conheça a nossa brochura institucional</a
-            >
-          </p>
-        </section>
-      </section>
-      <hr class="separador" />
-      <section id="equipa">
-        <h2 class="seccao">Equipa</h2>
-        <section id="elementosEquipa">
-          <section>
-            <img src="/imagens/foto1.png" alt="Daniela Alves" />
-            <section class="equipaInfo">
-              <p>Daniela Alves</p>
-              <p>Web Developer</p>
-            </section>
-          </section>
-          <section>
-            <img src="/imagens/foto2.png" alt="Manuela Ribeiro" />
-            <section class="equipaInfo">
-              <p>Manuela Ribeiro</p>
-              <p>Front-end developer</p>
-            </section>
-          </section>
-          <section>
-            <img src="/imagens/foto3.png" alt="Bruna Silva" />
-            <section class="equipaInfo">
-              <p>Bruna Silva</p>
-              <p>Designer</p>
-            </section>
-          </section>
-        </section>
-      </section>
-      <hr class="separador" />
-      <section id="ofertaFormativa">
-        <h2 class="seccao">Oferta formativa</h2>
-        <section class="slider">
-          <div id="slide">
-            <img src="/imagens/slider1.jpg" />
-            <div class="infoSlide">
-              <div class="info">
-                <h2>PRIMAVERA Academy</h2>
-                <h3>Juntos seremos mais fortes!</h3>
-                <p>Aposte em novas competências</p>
-              </div>
-            </div>
-          </div>
-        </section>
-      </section>
+
+    <main id="tableAdm">
+      <h1 class="profileTable">Utilizadores</h1>
+
+      <table class="table table-striped table-bordered" id="tableUsers">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Morada</th>
+            <th>Código Postal</th>
+            <th>País</th>
+            <th>Função</th>
+            <th>Status</th>
+            <th>Ação</th>
+          </tr>
+        </thead>
+        <tbody id="userTableBody"></tbody>
+      </table>
     </main>
+
     <footer>
       <section class="colFooter">
         <p class="footerTitulos">PRIMAVERA</p>
@@ -235,16 +168,16 @@
     </section> -->
 
     <section class="modal">
-      <section class="firstPage">
+      <section class="perfilPage">
         <span class="btModalClose">X</span>
         <div class="modalBody"></div>
       </section>
     </section>
 
     <script src="../js/utils.js" defer></script>
+    <script src="../js/userAdm.js" defer></script>
     <script src="../js/head.js" defer></script>
     <script src="../js/loginModal.js" defer></script>
-    <script src="../js/perfil.js" defer></script>
-    <script src="../js/register.js" defer></script>
+    <script src="../js/perfil.js"></script>
   </body>
 </html>
