--- a/html/registo_utilizador.html
+++ b/html/registo_utilizador.html
@@ -46,6 +46,12 @@
             </a>
           </div>
 
+          <section class="topHeaderIconAdm">
+            <a href="#" id="iconLogAdm"
+              ><i class="fa-solid fa-gear" title="Adm"></i
+            ></a>
+          </section>
+
           <a href="#" id="iconReg"
             ><i class="fa-solid fa-user-plus" title="Registo"></i
           ></a>
