--- a/html/primavera.html
+++ b/html/primavera.html
@@ -220,7 +220,7 @@
       <img src="/imagens/telefone.png" /> 919 204 462
     </section>
     <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
-    <!-- <section id="tela">
+    <section id="tela">
       <section id="secCookies">
         <span
           >Este website utiliza cookies para melhorar a sua experiência de
@@ -232,7 +232,7 @@
           ></span
         >
       </section>
-    </section> -->
+    </section>
 
     <section class="modal">
       <section class="firstPage">
