Created carroussel in primavera page with bootstrap.

--- a/html/adm.html
+++ b/html/adm.html
@@ -111,6 +111,21 @@
         </ul>
       </section>
 
+      <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
+      <section id="tela">
+        <section id="secCookies">
+          <span
+            >Este website utiliza cookies para melhorar a sua experiência de
+            navegação. Para continuar a navegar, deve ler e aceitar os
+            <a class="termos" href="#">Termos e Condições</a>.</span
+          ><span
+            ><a id="btLiAceito" href="javascript:void(0)"
+              >Li e aceito &gt;</a
+            ></span
+          >
+        </section>
+      </section>
+
       <section class="colFooter">
         <p class="footerTitulos">EDUCATION</p>
         <ul class="footerUL">
@@ -155,7 +170,7 @@
     <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
 
     <section class="modal">
-      <section class="perfilPage">
+      <section class="modal-content-box">
         <span class="btModalClose">X</span>
         <div class="modalBody"></div>
       </section>
