--- a/html/registo_utilizador.html
+++ b/html/registo_utilizador.html
@@ -220,8 +220,23 @@
       </section>
     </footer>
 
+    <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
+    <section id="tela">
+      <section id="secCookies">
+        <span
+          >Este website utiliza cookies para melhorar a sua experiência de
+          navegação. Para continuar a navegar, deve ler e aceitar os
+          <a class="termos" href="#">Termos e Condições</a>.</span
+        ><span
+          ><a id="btLiAceito" href="javascript:void(0)"
+            >Li e aceito &gt;</a
+          ></span
+        >
+      </section>
+    </section>
+
     <section class="modal">
-      <section class="registerPage">
+      <section class="modal-content-box">
         <span class="btModalClose">X</span>
         <div class="modalBody"></div>
       </section>
