Fix bugs carroussel and messages error.

--- a/html/EditarSenha.html
+++ b/html/EditarSenha.html
@@ -113,6 +113,12 @@
       </form>
     </main>
 
+    <div id="customAlert" class="custom-alert hidden">
+      <button class="close-alert">&times;</button>
+      <p class="main-message">Dados atualizados com sucesso!</p>
+      <p class="sub-message">Saindo do modo alteração.</p>
+    </div>
+
     <footer>
       <section class="colFooter">
         <p class="footerTitulos">PRIMAVERA</p>
@@ -172,7 +178,6 @@
     <section id="divTelefone">
       <img src="/imagens/telefone.png" /> 919 204 462
     </section>
-    <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
 
     <a href="#" id="setaAcima"><img src="/imagens/setacima.png" /></a>
     <section id="tela">
