--- a/html/adm.html
+++ b/html/adm.html
@@ -78,11 +78,11 @@
       <table class="table table-striped table-bordered" id="tableUsers">
         <thead>
           <tr>
-            <th>ID</th>
+            <th>Id</th>
             <th>Nome</th>
             <th>Email</th>
             <th>Morada</th>
-            <th>Código Postal</th>
+            <th>Código-Postal</th>
             <th>País</th>
             <th>Função</th>
             <th>Status</th>
